style: use eslint baby
